[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/themes/kuis/pilihanA.tres" type="Theme" id=1]
[ext_resource path="res://assets/themes/kuis/PilihanB.tres" type="Theme" id=2]
[ext_resource path="res://assets/themes/kuis/PilihanD.tres" type="Theme" id=3]
[ext_resource path="res://assets/themes/kuis/PilihanC.tres" type="Theme" id=4]
[ext_resource path="res://assets/music and sound/wrong_answer.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/music and sound/correct_answer.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/fonts/Quicksand/static/Quicksand-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/KuisTemplate/TemplatePertanyaan.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0862745, 0.105882, 0.180392, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=3]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 2 )
Label/styles/normal = null

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.12549, 0.74902, 0.333333, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.831373, 0.329412, 0.415686, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="Animation" id=8]
resource_name = "benar"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "salah"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="TemplatePertanyaan" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 360, 640 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
jumlahKolom = 3

[node name="Panel" type="Panel" parent="."]
visible = false
margin_right = 720.0
margin_bottom = 1280.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 638.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 720.0
margin_bottom = 638.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 317.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "halo guys"
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 720.0
margin_bottom = 638.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="OptionConteinerMC" type="MarginContainer" parent="VBoxContainer"]
margin_top = 642.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 5 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/OptionConteinerMC"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 618.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="PilihanA" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer"]
margin_right = 680.0
margin_bottom = 134.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )

[node name="ButtonA" type="Button" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA"]
margin_right = 680.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 90.0
percent_visible = false

[node name="Benar" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Salah" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA"]
margin_right = 680.0
margin_bottom = 134.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA/HBoxContainer"]
margin_right = 636.0
margin_bottom = 134.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA/HBoxContainer"]
margin_left = 640.0
margin_right = 680.0
margin_bottom = 134.0
rect_min_size = Vector2( 40, 96 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 0

[node name="Label" type="Label" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 25.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "A"
align = 1

[node name="PilihanB" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer"]
margin_top = 154.0
margin_right = 680.0
margin_bottom = 288.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="ButtonB" type="Button" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB"]
margin_right = 680.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 60.0
percent_visible = false

[node name="Benar" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Salah" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB"]
margin_right = 680.0
margin_bottom = 134.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB/HBoxContainer"]
margin_right = 636.0
margin_bottom = 134.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB/HBoxContainer"]
margin_left = 640.0
margin_right = 680.0
margin_bottom = 134.0
rect_min_size = Vector2( 40, 96 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 0

[node name="Label" type="Label" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB/HBoxContainer/MarginContainer"]
margin_left = 9.0
margin_top = 10.0
margin_right = 25.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "B"
align = 1

[node name="PilihanC" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer"]
margin_top = 308.0
margin_right = 680.0
margin_bottom = 442.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="ButtonC" type="Button" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC"]
margin_right = 680.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 30.0
percent_visible = false

[node name="Benar" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Salah" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC"]
margin_right = 680.0
margin_bottom = 134.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC/HBoxContainer"]
margin_right = 636.0
margin_bottom = 134.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC/HBoxContainer"]
margin_left = 640.0
margin_right = 680.0
margin_bottom = 134.0
rect_min_size = Vector2( 40, 96 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 0

[node name="Label" type="Label" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC/HBoxContainer/MarginContainer"]
margin_left = 13.0
margin_top = 10.0
margin_right = 25.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "c"
align = 1

[node name="PilihanD" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer"]
margin_top = 462.0
margin_right = 680.0
margin_bottom = 596.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="ButtonD" type="Button" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD"]
margin_right = 680.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 60.0
percent_visible = false

[node name="Benar" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Salah" type="Panel" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD"]
visible = false
margin_right = 680.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD"]
margin_right = 680.0
margin_bottom = 134.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD/HBoxContainer"]
margin_right = 636.0
margin_bottom = 134.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD/HBoxContainer"]
margin_left = 640.0
margin_right = 680.0
margin_bottom = 134.0
rect_min_size = Vector2( 40, 96 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 0

[node name="Label" type="Label" parent="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD/HBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 10.0
margin_right = 25.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "D"
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="tweenShow" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/benar = SubResource( 8 )
anims/salah = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/OptionConteinerMC/GridContainer/PilihanA/ButtonA" to="." method="_on_ButtonA_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionConteinerMC/GridContainer/PilihanB/ButtonB" to="." method="_on_ButtonB_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionConteinerMC/GridContainer/PilihanC/ButtonC" to="." method="_on_ButtonC_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionConteinerMC/GridContainer/PilihanD/ButtonD" to="." method="_on_ButtonD_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
